RESOLVED FIXED194460
B3LowerMacros wrongly sets m_changed to true in the case of AtomicWeakCAS on x86
https://bugs.webkit.org/show_bug.cgi?id=194460
Summary B3LowerMacros wrongly sets m_changed to true in the case of AtomicWeakCAS on x86
Robin Morisset
Reported 2019-02-08 15:42:41 PST
This is not a serious problem, but may lead to unnecessary calls to m_proc.resetReachability(); m_proc.invalidateCFG();
Attachments
Patch (1.71 KB, patch)
2019-02-08 15:46 PST, Robin Morisset
no flags
Robin Morisset
Comment 1 2019-02-08 15:46:22 PST
Mark Lam
Comment 2 2019-02-08 15:52:47 PST
Comment on attachment 361546 [details] Patch r=me
WebKit Commit Bot
Comment 3 2019-02-08 16:22:03 PST
Comment on attachment 361546 [details] Patch Clearing flags on attachment: 361546 Committed r241217: <https://trac.webkit.org/changeset/241217>
WebKit Commit Bot
Comment 4 2019-02-08 16:22:04 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-02-08 16:23:34 PST
Note You need to log in before you can comment on or make changes to this bug.