B3LowerMacros wrongly sets m_changed to true in the case of AtomicWeakCAS on x86 https://bugs.webkit.org/show_bug.cgi?id=194460

Reviewed by Mark Lam.

Trivial fix, should already be covered by testAtomicWeakCAS in testb3.cpp.

* b3/B3LowerMacros.cpp:


Canonical link: https://commits.webkit.org/208876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241217 268f45cc-cd09-0410-ab3c-d52691b4dbfc